--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -6,7 +5,7 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   overflow: hidden;
 }
 
@@ -69,8 +68,10 @@ section {
 }
 
 .logo {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bolder;
   color: #4c96d7;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   font-weight: 600;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -117,7 +118,6 @@ section {
   pointer-events: none;
   transition: 0.5s;
 }
-
 .dropdown ul {
   position: relative;
 }
@@ -170,7 +170,6 @@ section {
   cursor: pointer;
   transform: translateX(10px);
 }
-
 .dropdown.second .arrow {
   top: 10px;
   left: -5.5px;
@@ -197,7 +196,6 @@ section {
   align-items: center;
   justify-content: flex-end;
 }
-
 .hamburger-menu div {
   width: 1.6rem;
   height: 3px;
@@ -372,7 +370,6 @@ section {
 
   .arrow {
     z-index: 1;
-    /* background-color: #69bde7; */
     left: 10%;
     transform: scale(1.1) rotate(45deg);
     transition: 0.5s;
@@ -402,5 +399,20 @@ section {
     background-color: #b2dcf3;
     color: #4c96d7;
   }
+}
+footer {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-align: center;
+  padding: 10px;
+  background-color: lightblue;
+}
+footer a {
+  color: black;
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+footer a:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
 /*# sourceMappingURL=style.css.map */
