--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,6 @@
 // @import url('URL');
 
+// ? Mixins
 @mixin flex-center {
   display: flex;
   justify-content: center;
@@ -17,10 +18,13 @@
   justify-content: flex-end;
 }
 
+// ? Variables
 // Color Variables
-$clb: lightblue; // color-lightblue
+$clb: #add8e6; // color-lightblue
 $cwh: #fff; // color-white
+$cbl: #000; // color-black
 $color1: #4c96d7;
+$color2: #303030;
 
 // Font Variables
 $font1: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -41,6 +45,7 @@ body {
 // Reset
 ul { list-style: none; }
 a { text-decoration: none; }
+.space { background-color: transparent;}
 
 // Header
 header {
@@ -51,7 +56,7 @@ header {
   z-index: 1000;
 }
 
-// ! Do not add a section tag on your document
+// ! Do not use html section tag on your document
 section {
   position: relative;
   height: calc(100vh - 3rem);
@@ -356,11 +361,42 @@ section {
   }
 }
 
+@media (max-width: 545px) {
+  .logo { display: none;}
+}
+
 ///////////////////////////////
 // Main (Content)
 
+main {
+  background-color: $cwh;
+  margin: 0 10px;
+  font-size: large;
+  // border: 1px solid black;
 
+  h1, h2, h3 { font-weight: bolder; }
+  h4, h5, h6 { font-weight: lighter; }
 
+  h1.title, h1.title a {
+    text-decoration: underline $color1 5px;
+  }
+
+  h1.title a { color: $cbl; }
+
+  h1.title a:hover {
+    color: $color1;
+  }
+
+  a { color: $color1; }
+  a:hover {
+    color: $cbl;
+    text-decoration: underline solid $color1 2px;
+  }
+
+  .content { padding: 5px 10px; }
+  .content p { text-align: justify; }
+
+}
 ///////////////////////////////
 
 // Footer
@@ -369,9 +405,10 @@ footer {
   text-align: center;
   padding: 10px;
   background-color: $clb;
+  color: $color2;
 
   a {
-    color: black;
+    color: $color2;
     text-decoration-line: none;
   }
 
