--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
@@ -18,6 +22,15 @@ a {
 
 .space {
   background-color: transparent;
+}
+
+#page {
+  min-height: 100%;
+}
+
+#content {
+  overflow: auto;
+  padding-bottom: 100px;
 }
 
 header {
@@ -436,6 +449,9 @@ section {
   padding: 15px 30px;
   letter-spacing: 2px;
 }
+.header-slide-container .notes p {
+  padding-top: 10px;
+}
 .header-slide-container .picture {
   margin: 0;
   padding: 0;
@@ -491,6 +507,7 @@ main {
   background-color: #fff;
   margin: 0 5px;
   font-size: large;
+  padding: 15px 0;
 }
 main h1, main h2, main h3 {
   font-weight: bolder;
@@ -560,6 +577,10 @@ footer {
   padding: 10px;
   background-color: #add8e6;
   color: #303030;
+  position: relative;
+  height: 100px;
+  margin-top: -100px;
+  clear: both;
 }
 footer a {
   color: #303030;
