--- a/css/style.scss
+++ b/css/style.scss
@@ -33,10 +33,14 @@ $font1: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin: 0;
   box-sizing: border-box;
 }
+html, body { height: 100%; }
 body { font-family: $font1; }
 ul { list-style: none; }
 a { text-decoration: none; }
 .space { background-color: transparent; }
+
+#page { min-height: 100%; }
+#content { overflow: auto; padding-bottom: 100px; }
 
 // Header
 header {
@@ -362,6 +366,8 @@ section {
     top: 0;
     padding: 15px 30px;
     letter-spacing: 2px;
+
+    p { padding-top: 10px; }
   }
 
   .picture { margin: 0; padding: 0; width: 100%; }
@@ -397,6 +403,7 @@ main {
   background-color: $cwh;
   margin: 0 5px;
   font-size: large;
+  padding: 15px 0;
 
   h1, h2, h3 { font-weight: bolder; }
   h4, h5, h6 { font-weight: lighter; }
@@ -438,6 +445,10 @@ footer {
   padding: 10px;
   background-color: $clb;
   color: $color2;
+  position: relative;
+  height: 100px;
+  margin-top: -100px;
+  clear: both;
 
   a { color: $color2; text-decoration-line: none; }
   a:hover { text-decoration-line: underline; }
