--- a/css/style.scss
+++ b/css/style.scss
@@ -22,17 +22,12 @@ $cwh: #fff; // color-white
 $cbl: #000; // color-black
 $color1: #4c96d7;
 $color2: #303030;
-
 // Font Variables
 $font1: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 // ? Document
 // Reset
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+* { padding: 0; margin: 0; box-sizing: border-box; }
 html, body { height: 100%; }
 body { font-family: $font1; }
 ul { list-style: none; }
@@ -41,6 +36,10 @@ a { text-decoration: none; }
 
 #page { min-height: 100%; }
 #content { overflow: auto; padding-bottom: 100px; }
+
+.d-none { display: none !important; }
+.d-inline-flex { display: inline-flex !important; }
+.pl-10, .pl-10 li { padding-left: 10px !important; }
 
 // Header
 header {
@@ -76,15 +75,9 @@ section {
   display: flex;
   position: relative;
 }
-.logo-container {
-  flex: 1;
-  @include flex-center-sb;
-}
+.logo-container { flex: 1; @include flex-center-sb; }
 
-.nav-btn {
-  flex: 3;
-  display: flex;
-}
+.nav-btn { flex: 3; display: flex; }
 .nav-links { flex: 2; }
 
 .logo {
@@ -395,6 +388,11 @@ section {
     padding: 0;
   }
 }
+@media (min-width: 555px) and (max-width: 840px) { .picture img { max-width: 50%; } }
+@media (min-width: 480px) and (max-width: 485px) { .header-slide-container { margin-bottom: 10px; } }
+@media (min-width: 407px) and (max-width: 479px) { .header-slide-container { margin-bottom: 50px; } }
+@media (min-width: 370px) and (max-width: 406px) { .header-slide-container { margin-bottom: 75px; } }
+@media (min-width: 300px) and (max-width: 369px) { .header-slide-container { margin-bottom: 100px; } }
 
 ///////////////////////////////
 // Main (Content)
@@ -408,10 +406,7 @@ main {
   h1, h2, h3 { font-weight: bolder; }
   h4, h5, h6 { font-weight: lighter; }
 
-  h1.title, h1.title a {
-    font-size: 2.75rem;
-    text-decoration: underline $color1 5px;
-  }
+  h1.title, h1.title a { font-size: 2.75rem; text-decoration: underline $color1 5px; }
   h1.title a { color: $cbl; }
   h1.title a:hover { color: $color1; }
 
@@ -420,10 +415,7 @@ main {
   h2.subtitle a:hover { color: $color1; }
 
   a { color: $color1; }
-  a:hover {
-    color: $cbl;
-    text-decoration: underline solid $color1 2px;
-  }
+  a:hover { color: $cbl; text-decoration: underline solid $color1 2px; }
 
   .content { padding: 5px 10px; }
   .content p { text-align: justify; }
