--- a/css/style.scss
+++ b/css/style.scss
@@ -419,6 +419,8 @@ main {
 
   .content { padding: 5px 10px; }
   .content p { text-align: justify; }
+
+  .list { list-style: circle !important; padding-left: 25px; }
 }
 
 // Mark Tag
